syntax = "proto2";
option java_outer_classname = "Message";

message Msg {
    required bytes messageID = 1;
    required bytes payload = 2;
    required fixed64 checkSum = 3;
    optional bytes fwdAddress = 4;
    optional int32 fwdPort = 5;
}
